--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,150 @@
         tools:context=".MainActivity">
 
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
+            android:layout_width="379dp"
+            android:layout_height="36dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.044" android:textAlignment="viewEnd" android:id="@+id/tvExpression"/>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="405dp"
+            android:layout_height="444dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="117dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvExpression">
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" tools:visibility="visible" android:layout_marginVertical="25dp"
+                android:layout_margin="10dp">
+            <Button
+                    android:text="C"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvClealear" android:layout_weight="1"
+                    android:layout_margin="10dp"/>
+            <Button
+                    android:text="( )"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvParen" android:layout_weight="1"
+                    android:layout_margin="10dp"/>
+            <Button
+                    android:text="%"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvModulas" android:layout_weight="1"
+                    android:layout_margin="10dp"/>
+            <Button
+                    android:text="/"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvDivide" android:layout_weight="1"
+                    android:layout_margin="10dp"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" tools:visibility="visible" android:layout_marginBottom="25dp"
+                android:layout_margin="10dp">
+            <Button
+                    android:text="7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvSeven" android:layout_weight="1"
+                    android:layout_margin="10dp"/>
+            <Button
+                    android:text="8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvEight" android:layout_weight="1"
+                    android:layout_margin="10dp"/>
+            <Button
+                    android:text="9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvNine" android:layout_weight="1"
+                    android:layout_margin="10dp"/>
+            <Button
+                    android:text="*"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvMultiply" android:layout_weight="1"
+                    android:layout_margin="10dp"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" tools:visibility="visible" android:layout_marginBottom="25dp"
+                android:layout_margin="10dp">
+            <Button
+                    android:text="4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvFour" android:layout_weight="1"
+                    android:layout_margin="10dp"/>
+            <Button
+                    android:text="5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvFive" android:layout_weight="1"
+                    android:layout_margin="10dp"/>
+            <Button
+                    android:text="6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvSix" android:layout_weight="1"
+                    android:layout_margin="10dp"/>
+            <Button
+                    android:text="-"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvMinus" android:layout_weight="1"
+                    android:layout_margin="10dp"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" tools:visibility="visible" android:layout_marginBottom="25dp"
+                android:layout_margin="10dp">
+            <Button
+                    android:text="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvOne" android:layout_weight="1"
+                    android:layout_margin="10dp"/>
+            <Button
+                    android:text="2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvTwo" android:layout_weight="1"
+                    android:layout_margin="10dp"/>
+            <Button
+                    android:text="3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvThree" android:layout_weight="1"
+                    android:layout_margin="10dp"/>
+            <Button
+                    android:text="+"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvPlus" android:layout_weight="1"
+                    android:layout_margin="10dp"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="63dp" android:layout_margin="10dp">
+            <Button
+                    android:text="+/-"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvChangeSign" android:layout_weight="1"
+                    android:background="@android:drawable/editbox_dropdown_light_frame" android:layout_margin="10dp"/>
+            <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvZero" android:layout_weight="1"
+                    android:background="@android:drawable/editbox_dropdown_light_frame" android:layout_margin="10dp"
+                    android:text="0"/>
+            <Button
+                    android:text="."
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvDecimal" android:layout_weight="1"
+                    android:background="@android:drawable/editbox_dropdown_light_frame" android:layout_margin="10dp"/>
+            <Button
+                    android:text="="
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvResult" android:layout_weight="1"
+                    android:background="@android:drawable/editbox_dropdown_light_frame" android:layout_margin="10dp"/>
+        </LinearLayout>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
