--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,20 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity" android:backgroundTint="#673AB7" android:layout_gravity="left">
 
     <TextView
-            android:layout_width="379dp"
+            android:layout_width="385dp"
             android:layout_height="36dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.044" android:textAlignment="viewEnd" android:id="@+id/tvExpression"/>
+            app:layout_constraintVertical_bias="0.044" android:textAlignment="viewEnd" android:id="@+id/tvExpression"
+            android:textSize="36sp"
+            android:autoSizeMaxTextSize="48sp" android:autoSizeMinTextSize="18sp" android:autoLink="all"
+            android:autoText="false" android:autoSizeTextType="uniform" tools:text="0" android:gravity="end"
+            android:ellipsize="start" android:singleLine="true"/>
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="405dp"
@@ -22,7 +26,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="117dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvExpression">
+            app:layout_constraintTop_toBottomOf="@+id/tvExpression" android:background="#FF9800">
         <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
@@ -135,22 +139,22 @@
                     android:text="+/-"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/tvChangeSign" android:layout_weight="1"
-                    android:background="@android:drawable/editbox_dropdown_light_frame" android:layout_margin="10dp"/>
+                    android:layout_margin="10dp"/>
             <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/tvZero" android:layout_weight="1"
-                    android:background="@android:drawable/editbox_dropdown_light_frame" android:layout_margin="10dp"
+                    android:layout_margin="10dp"
                     android:text="0"/>
             <Button
                     android:text="."
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/tvDecimal" android:layout_weight="1"
-                    android:background="@android:drawable/editbox_dropdown_light_frame" android:layout_margin="10dp"/>
+                    android:layout_margin="10dp"/>
             <Button
-                    android:text="="
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/tvResult" android:layout_weight="1"
-                    android:background="@android:drawable/editbox_dropdown_light_frame" android:layout_margin="10dp"/>
+                    android:background="@drawable/ic_equal1" android:layout_margin="10dp"
+                    android:drawableLeft="@drawable/ic_equal" android:drawableRight="@drawable/ic_equal"/>
         </LinearLayout>
     </LinearLayout>
 
