--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity" android:backgroundTint="#673AB7" android:layout_gravity="left">
+        tools:context=".MainActivity" android:layout_gravity="left"
+        android:background="#03A9F4">
 
     <TextView
             android:layout_width="385dp"
@@ -18,7 +19,7 @@
             android:textSize="36sp"
             android:autoSizeMaxTextSize="48sp" android:autoSizeMinTextSize="18sp" android:autoLink="all"
             android:autoText="false" android:autoSizeTextType="uniform" tools:text="0" android:gravity="end"
-            android:ellipsize="start" android:singleLine="true"/>
+            android:ellipsize="start" android:singleLine="true" android:textColor="@android:color/black"/>
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="405dp"
